@@ -1,5 +1,10 @@
 2007-10-31  Alexander Larsson  <alexl@redhat.com>
 
+        * libnautilus-private/nautilus-vfs-utils.[ch]:
+	Remove more unused gnome-vfs helpers
+
+2007-10-31  Alexander Larsson  <alexl@redhat.com>
+
 	* src/file-manager/fm-icon-view.c (play_file):
 	Use a better pipeline for audio preview (doesn't play videos)
 	Add back totem preview app.
